--- a/Courses/ECON_8080_Spring_2023/index.Rmd
+++ b/Courses/ECON_8080_Spring_2023/index.Rmd
@@ -17,6 +17,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - [cps09mar.dta](cps09mar.dta)
 
+[HW 3](hw3.html), due Thursday, Mar. 2
+
 # Additional Material for Midterm 1
 
 * Midterm 1 covers the course lecture notes 1-4 / the first 4 chapters of Hansen.
