--- a/Courses/ECON_8080_Spring_2023/index.Rmd
+++ b/Courses/ECON_8080_Spring_2023/index.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - [cps09mar.dta](cps09mar.dta)
 
-[HW 3](hw3.html), due Thursday, Mar. 2
+[HW 3](hw3.html), due Thursday, Mar. 2, [[[solutions](hw3_sol.pdf)]]
 
 # Additional Material for Midterm 1
 
