--- a/Courses/ECON_8080_Spring_2023/index.Rmd
+++ b/Courses/ECON_8080_Spring_2023/index.Rmd
@@ -19,6 +19,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 [HW 3](hw3.html), due Thursday, Mar. 2, [[[solutions](hw3_sol.pdf)]]
 
+[HW 4](hw4.html), due Thursday, Mar. 23
+
 # Additional Material for Midterm 1
 
 * Midterm 1 covers the course lecture notes 1-4 / the first 4 chapters of Hansen.
