--- a/Courses/ECON_8080_Spring_2023/index.Rmd
+++ b/Courses/ECON_8080_Spring_2023/index.Rmd
@@ -21,6 +21,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 [HW 4](hw4.html), due Thursday, Mar. 23, [[[solutions](hw4_sol.pdf)]]
 
+[HW 5](hw5.html), due Tuesday, Apr. 18
+
 # Additional Material for Midterm 1
 
 * Midterm 1 covers the course lecture notes 1-4 / the first 4 chapters of Hansen.
