added post about dcdh

--- a/_posts/2023-05-29-dCdH.Rmd
+++ b/_posts/2023-05-29-dCdH.Rmd
@@ -5,7 +5,8 @@ output:
     variant: "gfm+tex_math_dollars"
     preserve_yaml: TRUE
 include-before:
-- '$$\newcommand{\E}{\mathbb{E}}$$'
+- $$\newcommand{\E}{\mathbb{E}}$$
+- $$\newcommand{\indicator}[1]{ \mathbf{1}\{#1\} }$$
 author: "brant"
 date: '2023-05-29'
 layout: single
