--- a/_posts/2023-05-29-dCdH.md
+++ b/_posts/2023-05-29-dCdH.md
@@ -4,9 +4,6 @@ output:
   md_document:
     variant: "gfm+tex_math_dollars"
     preserve_yaml: TRUE
-include-before:
-- $$\newcommand{\E}{\mathbb{E}}$$
-- $$\newcommand{\indicator}[1]{ \mathbf{1}\{#1\} }$$
 author: "brant"
 date: '2023-05-29'
 layout: single
@@ -19,6 +16,9 @@ categories:
   - Notes to Self
 comments: true
 ---
+
+$$\newcommand{\E}{\mathbb{E}}$$
+$$\newcommand{\indicator}[1]{ \mathbf{1}\{#1\} }$$
 
 In my recent chapter in the *Handbook of Labor, Human Resources, and
 Population Economics*, I included proofs of results from Goodman-Bacon
